--- a/README
+++ b/README
@@ -1,18 +1,19 @@
-dotfiles
+## dotfiles
+
+I use [dotfile-cli](https://github.com/towry/dotfile-cli) to manage my dotfiles.
+
+
+
 ~~~~~~~~
 
 towry's dotfiles.
 
 * source - some config to append to zshrc
 * link - some config to link to home.
-* copy - some config to copy to home.
 * conf - some configurations.
-* backup - unknow.
-* cache - unknow.
-* init - unknow.
-* test - unknow.
-* vendor - unknow.
-
+* backup - backup files before do things dangerously.
+* vendor - third party repos etc.
 
 ------------------------
 Tue Jun  7 00:29:59 2016
+~~~~~~~~
